Fix suggestion z-index

--- a/client/src/components/Styles/NavBar.module.css
+++ b/client/src/components/Styles/NavBar.module.css
@@ -77,6 +77,7 @@
 	max-width: 1150px;
 	position: absolute;
 	width: calc(100% + 20px);
+	z-index: 8000;
 }
 .dropdown:empty {
 	border: none;
